Fix tutorial typos

--- a/src/pages/en/tutorial/1-setup/1.mdx
+++ b/src/pages/en/tutorial/1-setup/1.mdx
@@ -110,4 +110,4 @@ Which of the following is...
 
 ### Resources
 
-- <p>[FreeCodeCamp.org](https://freecodecamp.org) <Badge>external</Badge> — a free educational site with full courses or quick refreshers in HTML, CSS, JS and more.</p>
+- <p>[FreeCodeCamp.org](https://freecodecamp.org) <Badge>external</Badge> — a free educational site with full courses or quick refreshers in HTML, CSS, JS, and more.</p>
