--- a/src/pages/en/tutorial/2-pages/2.mdx
+++ b/src/pages/en/tutorial/2-pages/2.mdx
@@ -71,7 +71,7 @@ Now that you have built pages using `.astro` files, let's make some blog posts u
 
 2. Check your browser preview again at `localhost:3000/posts/post-1`. You should now see content on this page.
 
-3. Use your browser's Dev Tools to inspect this page. Notice that although you have not typed any HTML elements, your Markdown has been converted to HTML. You can see elements such as headings, paragraphs and list items.
+3. Use your browser's Dev Tools to inspect this page. Notice that although you have not typed any HTML elements, your Markdown has been converted to HTML. You can see elements such as headings, paragraphs, and list items.
 
 ## Link to your posts
 
@@ -158,7 +158,7 @@ Now that you have built pages using `.astro` files, let's make some blog posts u
 
 4. Check your browser preview and make sure that:
 
-    - All your links for Post 1, Post 2 and Post 3 lead to a working page on your site. (If you find a mistake, check your links on `blog.astro` or your Markdown file names.)
+    - All your links for Post 1, Post 2, and Post 3 lead to a working page on your site. (If you find a mistake, check your links on `blog.astro` or your Markdown file names.)
 
 
 
