--- a/src/pages/en/tutorial/2-pages/4.mdx
+++ b/src/pages/en/tutorial/2-pages/4.mdx
@@ -82,7 +82,7 @@ Using Astro's own `<style></style>` tags, you can style items on your page. Addi
 
 
 
-  4. Visit your About page in your browser again, and verify, through visual inspection or through dev tools, that each item in your list of skills is now green and bold.
+  4. Visit your About page in your browser again, and verify, through visual inspection or dev tools, that each item in your list of skills is now green and bold.
 
 ## Use your first CSS variable
 The Astro `<style>` tag can also reference any variables from your frontmatter script using the `define:vars={ {...} }` directive. You can **define variables within your code fence**, then **use them as CSS variables in your style tag**.
