--- a/src/pages/en/tutorial/2-pages/index.mdx
+++ b/src/pages/en/tutorial/2-pages/index.mdx
@@ -4,7 +4,7 @@ unitTitle: 'Add, style and link to pages on your site'
 title: 'Check in: Unit 2 - Pages'
 description: |-
   Tutorial: Build your first Astro blog —
-  Create, style and link to pages posts on your site
+  Create, style, and link to pages posts on your site
 ---
 import Checklist from '~/components/Checklist.astro';
 import Badge from '~/components/Badge.astro';
