--- a/src/pages/en/tutorial/3-components/1.mdx
+++ b/src/pages/en/tutorial/3-components/1.mdx
@@ -32,7 +32,7 @@ To hold `.astro` files that will generate HTML but that will not become new page
 
 1. Create a new file: `src/components/Navigation.astro`.
 
-2. Copy your links to navigate between pages from the top of any page and paste it into your new file, `Navigation.astro`:
+2. Copy your links to navigate between pages from the top of any page and paste them into your new file, `Navigation.astro`:
 
     ```astro title="src/components/Navigation.astro" "---"
     ---
