--- a/src/pages/en/tutorial/3-components/3.mdx
+++ b/src/pages/en/tutorial/3-components/3.mdx
@@ -92,7 +92,7 @@ Since your site will be viewed on different devices, let's create a page navigat
 
 ## Add responsive styles
 
-1. Update `Navigation.astro` with the a CSS class to control your navigation links. Wrap the existing navigation links in a `<div>` with the class `nav-links`.
+1. Update `Navigation.astro` with the CSS class to control your navigation links. Wrap the existing navigation links in a `<div>` with the class `nav-links`.
 
     ```astro title="src/components/Navigation.astro" ins={3,7}
     ---
