--- a/src/pages/en/tutorial/5-astro-api/4.mdx
+++ b/src/pages/en/tutorial/5-astro-api/4.mdx
@@ -23,9 +23,9 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
 
 Astro provides a custom package to quickly add an RSS feed to your website. 
 
-This official package generates a non-HTML document with information about all of your blog posts that can be read by **feed readers** like Feedly, The Old Reader and more. This document is updated every time your site is rebuilt.
+This official package generates a non-HTML document with information about all of your blog posts that can be read by **feed readers** like Feedly, The Old Reader, and more. This document is updated every time your site is rebuilt.
 
-Individuals can subscribe to your feed in a feed reader, and receive notification when you publish a new blog post on your site, making it a popular blog feature.
+Individuals can subscribe to your feed in a feed reader, and receive a notification when you publish a new blog post on your site, making it a popular blog feature.
 
 1. Quit the Astro development server and run the following command in the terminal to install Astro's RSS package.
 
@@ -112,7 +112,7 @@ Individuals can subscribe to your feed in a feed reader, and receive notificatio
       </Fragment>
     </PackageManagerTabs>
 
-4. Visit `localhost:3000/rss.xml` and verify that you can see (unformatted) text on the page with an `item` for each of your `.md` files. Each item should contain blog post information such as `title`, `url` and `description`.
+4. Visit `localhost:3000/rss.xml` and verify that you can see (unformatted) text on the page with an `item` for each of your `.md` files. Each item should contain blog post information such as `title`, `url`, and `description`.
 
     :::tip[view your rss feed in a reader]
     Download a feed reader, or sign up for an online feed reader service and subscribe to your site by adding your own Netlify URL. You can also share this link with others so they can subscribe to your posts, and be notified when a new one is published.
