--- a/src/pages/en/tutorial/5-astro-api/index.mdx
+++ b/src/pages/en/tutorial/5-astro-api/index.mdx
@@ -5,7 +5,7 @@ title: 'Check in: Unit 5 - Astro API'
 description: >-
   Tutorial: Build your first Astro blog —
 
-  Fetching and using data from project files to dynamically generate page
+  Fetching and using data from project files to dynamically generate pages
   content and routes
 ---
 import Badge from '~/components/Badge.astro';
