--- a/src/pages/en/tutorial/6-islands/1.mdx
+++ b/src/pages/en/tutorial/6-islands/1.mdx
@@ -151,7 +151,7 @@ import SvelteCounter from '../components/SvelteCounter.svelte';
       <Spoiler>**Same**: They both show the same HTML elements and look the same initially. **Different**: The component with the `client:load` directive will rerender after the page is loaded, and any interactive elements that it has will work.</Spoiler>
     </p>
 
-3. Assume the `SvelteCounter` component shows a number and has a button to increase it. If you couldn't see your website's code, only the live published page, how would you tell which of the two `<SvelteCounter />` component used `client:visible`? 
+3. Assume the `SvelteCounter` component shows a number and has a button to increase it. If you couldn't see your website's code, only the live published page, how would you tell which of the two `<SvelteCounter />` components used `client:visible`? 
 
     <p>
       <Spoiler>Try clicking the button, and see which one is interactive. If it responds to your input, it must have had a `client:` directive.</Spoiler>
@@ -173,7 +173,7 @@ For each of the following components, identify what will be sent to the browser:
         HTML and CSS only
       </Option>
       <Option isCorrect>
-        HTML, CSS and JavaScript
+        HTML, CSS, and JavaScript
       </Option>
     </MultipleChoice>
 
@@ -184,7 +184,7 @@ For each of the following components, identify what will be sent to the browser:
         HTML and CSS only
       </Option>
       <Option>
-        HTML, CSS and JavaScript
+        HTML, CSS, and JavaScript
       </Option>
     </MultipleChoice>
 </Box>
