--- a/src/pages/en/tutorial/6-islands/2.mdx
+++ b/src/pages/en/tutorial/6-islands/2.mdx
@@ -136,7 +136,7 @@ To add interactivity to an Astro component, you can use a `<script>` tag. This s
 
 ### Test your knowledge
 
-Choose whether each of the following statements describes Astro `<script>` tags, UI framework components or both.
+Choose whether each of the following statements describes Astro `<script>` tags, UI framework components, or both.
 
 1. They allow you to include interactive UI elements on your website.
 
@@ -166,7 +166,7 @@ Choose whether each of the following statements describes Astro `<script>` tags,
       </Option>
     </MultipleChoice>
 
-3. They allow you to "try out" a new framework without requiring you to start an entire new project using that tech stack.
+3. They allow you to "try out" a new framework without requiring you to start an entirely new project using that tech stack.
 
     <MultipleChoice>
       <Option>
