--- a/src/pages/en/tutorial/2-pages/1.mdx
+++ b/src/pages/en/tutorial/2-pages/1.mdx
@@ -127,7 +127,7 @@ When you are happy with the way your preview looks, **commit** your changes to y
 
     - Go to the **Source Control tab** in the left menu. It should have a small "3" displayed.
 
-    - You should see `index.astro`, `about.astro` and `blog.astro` listed as files that have changed.
+    - You should see `index.astro`, `about.astro`, and `blog.astro` listed as files that have changed.
 
 2. Enter a commit message (e.g. "Added two new pages - about and blog") in the text box, and press <kbd>Ctrl + Enter</kbd> (macOS: <kbd>Cmd ⌘ + Enter</kbd>) to commit the change to your current workspace.
 
@@ -145,8 +145,8 @@ Follow these steps every time you pause working! Your changes will be updated in
 ## Checklist
 
 <Checklist>
-- [ ] I can create a new page for my website, and link to it from an existing page.
-- [ ] I can commit my changes back to GitHub, and update my live site on Netlify.
+- [ ] I can create a new page for my website and link to it from an existing page.
+- [ ] I can commit my changes back to GitHub and update my live site on Netlify.
 </Checklist>
 </Box>
 
