--- a/src/pages/en/tutorial/3-components/index.mdx
+++ b/src/pages/en/tutorial/3-components/index.mdx
@@ -26,7 +26,7 @@ In this unit, you'll learn how to create **Astro components** to reuse code for 
 
 You'll build:
 - A Navigation component that presents a menu of links to your pages 
-- A Footer component to include on the bottom of each page
+- A Footer component to include at the bottom of each page
 - A Social Media component, used in the Footer, that links to profile pages
 - An interactive Hamburger component to toggle the Navigation on mobile
 
