--- a/src/pages/en/tutorial/4-layouts/2.mdx
+++ b/src/pages/en/tutorial/4-layouts/2.mdx
@@ -121,7 +121,7 @@ Can you figure out what should go in the blanks so that the following two compon
     author: Astro Learner
     ____: 2022-08-08
     ---
-    I learned so much today! Astro allows me to write in Markdown, but also use variables from the frontmatter. I can even even access those values in an Astro layout component.
+    I learned so much today! Astro allows me to write in Markdown, but also use variables from the frontmatter. I can even access those values in an Astro layout component.
     ```
 
 2.  ```astro title="src/layouts/MarkdownLayout.astro"
@@ -144,7 +144,7 @@ Can you figure out what should go in the blanks so that the following two compon
             author: Astro Learner
             pubDate: 2022-08-08
             ---
-            I learned so much today! Astro allows me to write in Markdown, but also use variables from the frontmatter. I can even even access those values in an Astro layout component.
+            I learned so much today! Astro allows me to write in Markdown, but also use variables from the frontmatter. I can even access those values in an Astro layout component.
             ```
 
         2.  ```astro title="src/layouts/MarkdownLayout.astro" " Footer " " frontmatter " ".author" "slot"
