--- a/src/pages/en/tutorial/4-layouts/3.mdx
+++ b/src/pages/en/tutorial/4-layouts/3.mdx
@@ -46,8 +46,8 @@ You already have a `BaseLayout.astro` for defining the overall layout of your pa
 
 2. Check your browser preview at `localhost:3000/posts/post-1`. Now you should see content rendered by:
 
-    - Your **main page layout**, including your styles, navigation links and social footer.
-    - Your **blog post layout**, including frontmatter properties like the description, date, title and image
+    - Your **main page layout**, including your styles, navigation links, and social footer.
+    - Your **blog post layout**, including frontmatter properties like the description, date, title, and image
     - Your **individual blog post Markdown content**, including just the text written in this post
 
 3. Notice that your page title is now displayed twice, once by each layout.
