--- a/src/pages/en/tutorial/4-layouts/index.mdx
+++ b/src/pages/en/tutorial/4-layouts/index.mdx
@@ -38,6 +38,6 @@ To do this, you will:
 ## Checklist
 
 <Checklist>
-- [ ] I am ready take my page design to the next level with layouts!
+- [ ] I am ready to take my page design to the next level with layouts!
 </Checklist>
 </Box>
