Better intro messaging (Gatsby and Next both updated)

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -8,9 +8,7 @@ framework: Gatsby
 import AstroJSXTabs from '~/components/tabs/AstroJSXTabs.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-After following the guidance on this page, you probably won't have your new Astro site exactly the way you want it yet.
-
-But, this guide gives you some key concepts and migration strategies to help you get started. Use the rest of our docs and our [Discord community](https://astro.build/chat) to keep going!
+Here are some key concepts and migration strategies to help you get started. Use the rest of our docs and our [Discord community](https://astro.build/chat) to keep going!
 
 ## Key Similarities between Gatsby and Astro
 
@@ -38,6 +36,10 @@ When you rebuild your Gatsby site in Astro, you will notice some important diffe
 
 
 ## Convert your Gatsby Project
+
+Each project migration will look different. But, there are some common steps you will probably need to get your new Astro site up and running.
+
+Even after following these instructions, you probably won't have your new Astro site exactly the way you want it yet. But, this page will get you started in the right direction.
 
 ### Create a new Astro project
 
