--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -8,9 +8,7 @@ framework: Next.js
 import AstroJSXTabs from '~/components/tabs/AstroJSXTabs.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-After following the guidance on this page, you probably won't have your new Astro site exactly the way you want it yet.
-
-But, this guide gives you some key concepts and migration strategies to help you get started. Use the rest of our docs and our [Discord community](https://astro.build/chat) to keep going!
+Here are some key concepts and migration strategies to help you get started. Use the rest of our docs and our [Discord community](https://astro.build/chat) to keep going!
 
 ## Key Similarities between Next.js and Astro
 
@@ -34,6 +32,10 @@ When you rebuild your Next.js site in Astro, you will notice some important diff
 - [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites. An existing Next.js app might be built for high client-side interactivity and may include items that are difficult to replicate in Astro, such as dashboards.
 
 ## Convert your Next.js Project
+
+Each project migration will look different. But, there are some common steps you will probably need to get your new Astro site up and running.
+
+Even after following these instructions, you probably won't have your new Astro site exactly the way you want it yet. But, this page will get you started in the right direction.
 
 ### Create a new Astro project
 
