intro matches Gatsby/Next

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -10,9 +10,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 [NuxtJS](https://nuxtjs.org) is a framework for building web applications on top of Vue.
 
-After following the guidance on this page, you probably won't have your new Astro site exactly the way you want it yet.
-
-But, this guide gives you some key concepts and migration strategies to help you get started. Use the rest of our docs and our [Discord community](https://astro.build/chat) to keep going!
+Here are some key concepts and migration strategies to help you get started. Use the rest of our docs and our [Discord community](https://astro.build/chat) to keep going!
 
 ## Key Similarities between Nuxt and Astro
 
