update to match Gatsby/Next "every project is different"

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -34,6 +34,10 @@ When you rebuild your Nuxt site in Astro, you will notice some important differe
 
 ## Convert your NuxtJS Project
 
+Each project migration will look different. But, there are some common steps you will probably need to get your new Astro site up and running.
+
+Even after following these instructions, you probably won't have your new Astro site exactly the way you want it yet. But, this page will get you started in the right direction.
+
 ### Create a new Astro project
 
 Use `npm create astro@latest` to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes). 
