update package manager commands in both

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -43,24 +43,35 @@ Even after following these instructions, you probably won't have your new Astro 
 
 ### Create a new Astro project
 
-Use `npm create astro@latest` to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes). 
+Use the `create astro` command for your package manager to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes). 
 
-
-You can also pass a `--template` argument to the `create-astro` command to start from an existing Astro repository on GitHub:
+You can also pass a `--template` argument to the `create astro` command to start from an existing Astro repository on GitHub:
 
   <PackageManagerTabs>
     <Fragment slot="npm">
     ```shell
+    # launch the Astro CLI Wizard 
+    npm create astro@latest
+
+    # start from any existing repo
     npm create astro -- --template <github-username>/<github-repo>
     ```
     </Fragment>
     <Fragment slot="pnpm">
     ```shell
+    # launch the Astro CLI Wizard 
+    pnpm create astro@latest
+
+    # start from any existing repo
     pnpm create astro --template <github-username>/<github-repo>
     ```
     </Fragment>
     <Fragment slot="yarn">
     ```shell
+    # launch the Astro CLI Wizard 
+    yarn create astro@latest
+
+    # start from any existing repo
     yarn create astro --template <github-username>/<github-repo>
     ```
     </Fragment>
