--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -37,7 +37,7 @@ When you rebuild your Gatsby site in Astro, you will notice some important diffe
 
 ## Convert your Gatsby Project
 
-Each project migration will look different. But, there are some common steps you will probably need to get your new Astro site up and running.
+Each project migration will look different. But, there are some common steps you will need to get your new Astro site up and running.
 
 Even after following these instructions, you probably won't have your new Astro site exactly the way you want it yet. But, this page will get you started in the right direction.
 
