commented out all but one Nextjs walkthrough, to match Gatsby

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -322,7 +322,9 @@ import Card from `../../components/Card.astro`;
 
 Convert any instances of `{children}` to an Astro `<slot />`. Astro does not need to receive `{children}` as a function prop and will automatically render child content in a `<slot />`.
 
-```astro title="src/components/MyComponent" del={1-7} ins={9-11}
+```astro title="src/components/MyComponent" del={3-9} ins={11-13}
+---
+---
 export default function MyComponent(props) { 
     return (
       <div>
@@ -361,11 +363,29 @@ See more about [Styling in Astro](/en/guides/styling/).
 
 Convert Gatsby's `<StaticImage />` and `<GatsbyImage />` components with [Astro's own image integration components](/en/guides/images/#astros-image-integration), or with a standard HTML `<img>` / JSX `<img />` tag as appropriate.
 
+```astro title="src/pages/index.astro"
+---
+import { Image } from '@astrojs/image/components';
+import localImage from "../images/brand/logo.png";
+import rocket from '../images/rocket.svg';
+---
+<Image src={localImage} alt="The Astro Logo" />
+<img src={rocket} alt="A rocketship in space.">
+```
+
 Astro's `<Image />` and `<Picture />` components are experimental, and currently work in `.astro` and `.mdx` files only. See a [full list of component attributes](/en/guides/integrations-guide/image/#usage) available for these components, and note that several will differ from Gatsby's attributes.
 
-Also, there is no standard configuration and attributes must be added to each component individually. For greater flexibility you can [build your own image component](/en/guides/images/#setting-default-values) to configure reusable image components with default attributes and styling.
+To continue using local images in Markdown (`.md`) files using standard Markdown syntax (`![]()`), move your images into your `public/` folder. You may need to update the link to the relative URL. You can also use the standard `<img>` tag in these files. Note that these [images in `public/` will not be optimized by Astro](/en/guides/images/#public).
 
-To continue using local images in Markdown using standard Markdown syntax (`![]()`), move your images into your `public/` folder. You may need to update the link to the relative URL. You can also use the standard `<img>` tag in these files.  Note that these [images in `public/` will not be optimized by Astro](/en/guides/images/#public).
+```md
+// src/pages/post-1.md
+
+# My Markdown Page
+
+<!-- Local image stored at public/assets/stars.png -->
+![A starry night sky.](/assets/stars.png)
+<img src="/assets/stars.png" alt="A starry night sky.">
+```
 
 In React (`.jsx`) components, use standard JSX image syntax (`<img />`). Astro will not optimize these images, but you can install and use NPM packages for more flexibility.
 
@@ -412,7 +432,7 @@ export const pageQuery = graphql`
 
 This example converts the main project layout (`layout.js`) from Gatsby's blog starter to `src/layouts/Layout.astro`.
 
-1. Identify the return().
+1. Identify the return() JSX.
 
   ```jsx {21-29} title="layout.js"
   import * as React from "react"
@@ -472,7 +492,7 @@ This example converts the main project layout (`layout.js`) from Gatsby's blog s
   </div>
   ```
 
-3. add a page shell so that your layout provides each page with the necessary parts of an HTML document:
+3. Add a page shell so that your layout provides each page with the necessary parts of an HTML document:
 
   ```astro title="src/layouts/Layout.astro" ins={3-10,22-23}
   ---
