--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -119,7 +119,7 @@ Here are some tips for converting a Next `.js` component into a `.astro` compone
 
 4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/guides/integrations-guide/react/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
 
-See [examples from Next's starter templates converted step-by-step](#guided-examples-see-the-steps).
+See [an example of a Next `.js` file converted step-by-step](#guided-example-next-data-fetching-to-astro).
 
 #### Compare: JSX vs Astro
 
@@ -340,6 +340,11 @@ See Astro's [testing guide](/en/guides/testing/) for more.
 
 Convert any Next `<Link to="">`, `<NavLink>` etc. components to HTML `<a href="">` tags. 
 
+```astro del={1} ins={2}
+<Link to="/blog">Blog</Link>
+<a href="/blog">Blog</a>
+```
+
 Astro does not use any special component for links, although you are welcome to build custom link components. You can then import and use this `<Link>` just as you would any other component.
 
 ```astro title="src/components/Link.astro"
@@ -366,19 +371,23 @@ import Card from `../../components/Card.astro`
 
 Convert any instances of `{children}` to an Astro `<slot />`. Astro does not need to receive `{children}` as a function prop and will automatically render child content in a `<slot />`.
 
-React components that pass multiple sets of children can be migrated to an Astro component using [named slots](/en/core-concepts/astro-components/#named-slots):
+```astro title="src/components/MyComponent" del={3-9} ins={11-13}
+---
+---
+export default function MyComponent(props) { 
+    return (
+      <div>
+        {props.children}
+      </div>
+    );  
+}
 
-```astro title="src/components/PageHeader.astro"
-<header>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <slot name="navItems"/>
-        </ul>
-    </nav>
-	<slot/>
-</header>
+<div>
+  <slot />
+</div>
 ```
+
+React components that pass multiple sets of children can be migrated to an Astro component using [named slots](/en/core-concepts/astro-components/#named-slots).
 
 See more about [specific `<slot />` usage in Astro](/en/core-concepts/astro-components/#slots).
 
@@ -445,9 +454,11 @@ You can learn more about [using images in Astro](/en/guides/images/) in the Imag
 
 
 
-## Guided examples: See the steps!
+## Guided example: Next data fetching to Astro
 
-Here is an example of small Next.js Pokédex application converted to Astro.
+Here is an example of Next.js Pokédex data fetch converted to Astro.
+
+{/* 
 
 This walks through converting three individual files to `.astro` files:
 
@@ -533,17 +544,14 @@ This example converts the main project layout (`/pages/_document.js`) to `src/la
             </div>
         </body>
     </html>
-    ```
-### Next API data fetching to Astro
-
+    ``` 
+*/}
+    
 `pages/index.js` fetches and displays a list of the first 151 Pokémon using [the REST PokéAPI](https://pokeapi.co/).
 
 Here's how to recreate that in `src/pages/index.astro`, replacing `getStaticProps()` with `fetch()`.
 
-**[tl/dr]:**
-1. Identify the return().
-2. Convert JSX to Astro by replacing Next or React syntax with Astro/HTML syntax.
-3. Add any needed JavaScript, props, imports.
+1. Identify the return() JSX.
 
 ```jsx title="pages/index.js" {6-18}
 import Link from 'next/link'
@@ -589,7 +597,7 @@ export const getStaticProps = async () => {
 }
 ```
 
-#### Create `src/pages/index.astro`
+2. Create `src/pages/index.astro`
 
 Use the return value of the Next function. Convert any Next or React syntax to Astro, including changing the case of any [HTML global attributes](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes).
 
@@ -619,12 +627,12 @@ Note that:
 </ul>
 ```
 
-#### Add any needed imports, props and JavaScript
+3. Add any needed imports, props and JavaScript
 
 Note that:
 
 - the `getStaticProps` function is no longer needed. Data from the API is fetched directly in the code fence.
-- The [`<Layout>` component converted earlier](#next-base-layout-to-astro) is imported, and wraps the page templating.
+- A `<Layout>` component is imported, and wraps the page templating.
 
 ```astro ins={2,4-16,19,31} title="src/pages/index.astro"
 ---
@@ -660,6 +668,7 @@ const pokemons = resJson.results.map(pokemon => {
 </Layout>
 ```
 
+{/* 
 ### Next dynamic routing to Astro
 
 This is a Next.js dynamic routing page (`pages/pokemon/[name].js`) that generates a detail screen for each of the first 151 Pokémon using [the REST PokéAPI](https://pokeapi.co/).
@@ -902,7 +911,9 @@ const pokemon = {
     <p class={styles.flavor}>{pokemon.flavorText}</p>
   </div>
 </Layout>
-```
+``` 
+
+*/}
 
 ## Community Resources 
 
